manifests/webhook/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-kubecluster-org-v1alpha1-hadoopapplication
  failurePolicy: Fail
  name: mhadoopapplication.kb.io
  rules:
  - apiGroups:
    - kubecluster.org
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hadoopapplications
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-kubecluster-org-v1alpha1-hadoopcluster
  failurePolicy: Fail
  name: mhadoopcluster.kb.io
  rules:
  - apiGroups:
    - kubecluster.org
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hadoopclusters
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-kubecluster-org-v1alpha1-hadoopapplication
  failurePolicy: Fail
  name: vhadoopapplication.kb.io
  rules:
  - apiGroups:
    - kubecluster.org
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hadoopapplications
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-kubecluster-org-v1alpha1-hadoopcluster
  failurePolicy: Fail
  name: vhadoopcluster.kb.io
  rules:
  - apiGroups:
    - kubecluster.org
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hadoopclusters
  sideEffects: None
